--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,3 +1,7 @@
+<!-- 
+	The layout for the rendered pages
+	All sections are included by other files found in the folder 'views'
+-->
 <!DOCTYPE html>
 <html>
 
