--- a/static/css/table.css
+++ b/static/css/table.css
@@ -4,7 +4,8 @@ table {
     background: white;
     border-radius: 6px;
     overflow: hidden;
-    max-width: 800px;
+    max-width: 100%;
+    table-layout: fixed;
     width: 100%;
     margin: 0 auto;
     position: relative;
@@ -14,6 +15,7 @@ table {
   }
   table td, table th {
     padding-left: 8px;
+    word-wrap: break-word;
   }
   table thead tr {
     height: 60px;
