--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,4 @@
+<!-- All necessary meta settings and references to the other files included here -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=1">
 <title>Vantaan työpaikat</title>
